feat: Implement batch tag creation functionality